2022-12-23  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.4-alpha06 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.4-alpha06: Postop';git push
	git tag -a 5.1.4-alpha06 -m 'all: cxl UDUNITS2_PATH; ncremap: 3D->3D fixes';git push --tags

	* Allow interpolation of ilev variables in input restart files to flg_grd_out_dpt_3D

	* Implement new Perlmutter build packages

2022-12-22  Charlie Zender  <zender@uci.edu>

	* Remove UDUNITS2_PATH from autoconf build commands

2022-12-21  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.4-alpha05 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.4-alpha05: Antlr';git push
	git tag -a 5.1.4-alpha05 -m 'all: Simplify UDUnits cnf';git push --tags

	* configure.ac: De-cruft, revamp, simplify UDUnits support, eliminate UDUNITS_PATH argument

2022-12-20  Charlie Zender  <zender@uci.edu>

	* Initialize previously uninitialized att_nm[NC_MAX_NAME+1L]={0}; at line 702 of nco_att_utl.c.
	This eliminates vexing "Conditional jump or move depends on uninitialised value(s)" valgrind errors.

	* Use NC_MAX_NAME+1 instead of NC_MAX_NAME

	* NCO 5.1.4-alpha04 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.4-alpha04: Messi';git push
	git tag -a 5.1.4-alpha04 -m 'ncremap: vrt 3D->1D, 3D->3D, 1D->3D, 1D->1D work;';git push --tags

	* Successfully test 3D->1D, 3D->3D, 1D->3D, 1D->1D

	* Add "depth" and "depth_bnds" to nco_var_is_fix()

	* Increase flexibility with mlc_nm, bd_nm, lt_nm, and flg_mlc_out

	* Fix mlc_out dimensions and missing values

	* Revamp determination of horizontal bounds for flg_grd_in_dpt_1D

2022-12-16  Charlie Zender  <zender@uci.edu>

	* Refine defaults for ease-of-use

	* Verify simultaneous hrz + vrt with WOA18 r025 destination grid

	* NCO 5.1.4-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.4-alpha03: FOMO';git push
	git tag -a 5.1.4-alpha03 -m 'ncremap: rgr rst, nfr mlc_in, dpt_mdp';git push --tags

	* Interpolation appears to work on regridded restarts
